--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>UP 12 Gud</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1>Welcome to UP 12 Gud !! Site coming up soon.</h1>
 </body>
 </html>
