--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UP 12 Gud</title>
+    <link rel="stylesheet" href="CSS/style.css">
+    <title>Portfolio</title>
 </head>
 <body>
-    <h1>Welcome to UP 12 Gud !! Site coming up soon.</h1>
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+    </header>
+    <main>
+        <section>
+            <h2>About Me</h2>
+            <p>Hello! I'm Manisri, a web developer.</p>
+        </section>
+        <section>
+            <h2>Projects</h2>
+            <ul>
+                <li>Project 1</li>
+                <li>Project 2</li>
+                <li>Project 3</li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>Contact me at: <a href="mailto:manisri19@example.com">manisri19@example.com</a></p>
+    </footer>
+    <script src="JS/script.js"></script>
 </body>
 </html>
