--- a/index.html
+++ b/index.html
@@ -4,28 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>Portfolio</title>
+    <title>UP 12 Gud</title>
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1>UP 12 Gud</h1>
     </header>
     <main>
         <section>
-            <h2>About Me</h2>
+            <h2>Site Coming Up Soon !!</h2>
             <p>Hello! I'm Manisri, a web developer.</p>
-        </section>
-        <section>
-            <h2>Projects</h2>
-            <ul>
-                <li>Project 1</li>
-                <li>Project 2</li>
-                <li>Project 3</li>
-            </ul>
-        </section>
+        </section>        
     </main>
     <footer>
-        <p>Contact me at: <a href="mailto:manisri19@example.com">manisri19@example.com</a></p>
+        <p>Contact us at: 8800813321</p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
