Add Instagram contact link to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>        
     </main>
     <footer>
-        <p>Contact us at: 8800813321</p>
+        <p>Contact us at: 8800813321 or <a href="https://www.instagram.com/up12_gud/">Instagram</a></p>
     </footer>
     <script src="JS/script.js"></script>
 </body>
