Update title and comment structure in index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>UP 12 Gud</title>
+    <title>UP 12 GUD — Premium Handcrafted Jaggery</title>
 </head>
 <body>
-    <header>
+    <!--<header>
         <h1>UP 12 Gud</h1>
     </header>
-    <!--<main>
+    <main>
         <section>
             <h2>Site Coming Up Soon !!</h2>            
         </section>        
