--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <meta http-equiv="refresh" content="0; url=https://preview--gud-jaggery-shop.lovable.app/">\n    <script>\n        window.location.href = 'https://preview--gud-jaggery-shop.lovable.app/';\n    <\/script>\n    <title>Redirection</title>\n</head>\n<body>\n    <p>If you are not redirected automatically, follow this <a href="https://preview--gud-jaggery-shop.lovable.app/">link</a>.</p>\n</body>\n</html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>    
+  <title>UP 12 GUD — Premium Handcrafted Jaggery</title>
+    <script>
+(function () {
+  function isMobile() {
+    return /Android|iPhone|iPad|iPod|Opera Mini|IEMobile/i.test(navigator.userAgent)
+           || window.innerWidth <= 768;
+  }
+
+  // Redirect only if NOT mobile
+  if (!isMobile()) {
+    window.location.replace("https://preview--gud-jaggery-shop.lovable.app/"); 
+  }
+})();
+</script>
+  </head>
+  <body>
+    Mobile Version coming up soon.
+  </body>
+</html>
+  
+
+  
