--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
   </head>
   <body>
-    Mobile Version coming up soon.
+    <h1>Mobile Version coming up soon.</h1>
   </body>
 </html>
   
